--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -13,20 +13,20 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: ENV.fetch("DATABASE_USERNAME", "root")
+  password: ENV.fetch("DATABASE_PASSWORD", "root")
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: shorten_url_development
+  database: ENV["DATABASE_NAME"]
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: shorten_url_test
+  database: ENV["DATABASE_NAME"]
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: shorten_url_production
-  username: shorten_url
-  password: <%= ENV["SHORTEN_URL_DATABASE_PASSWORD"] %>
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  database: <%= ENV["DATABASE_NAME"] %>
